# dr-toru

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  PROJECT.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml
.agents/skills/github-projects/: SKILL.md
.claude/: ralph-loop.local.md  settings.json  settings.local.json
.codex/environments/: environment.toml
.github/workflows/: release-rc.yml  release.yml
benchmarks/: README.md  benchmark-asr.ts  dump_wasm_logits.ts  test.txt
docs/brainstorms/: 2026-02-12-beam-search-kenlm-brainstorm.md  2026-02-16-context-textarea-brainstorm.md  2026-02-16-typing-indicator-brainstorm.md  2026-02-19-llm-document-generation-brainstorm.md  2026-02-20-treatment-summary-generation-brainstorm.md  2026-02-22-language-selection-brainstorm.md
docs/plans/: 2026-02-12-feat-beam-search-kenlm-decoding-plan.md  2026-02-16-feat-audio-reactive-waveform-bars-plan.md  2026-02-16-feat-context-textarea-plan.md  2026-02-16-feat-typing-dots-indicator-plan.md  2026-02-16-fix-recording-timer-stays-at-zero-plan.md  2026-02-17-feat-folder-view-and-llm-artifacts-plan.md  2026-02-19-feat-soap-note-generation-plan.md  2026-02-20-feat-treatment-summary-generation-plan.md  2026-02-22-feat-language-selection-japanese-english-plan.md  2026-02-22-fix-kotoba-upload-drops-transcript-chunks-plan.md
public/kenlm/: kenlm.js  kenlm.wasm
public/models/: lm_6.kenlm  medasr_lasr_ctc.onnx  medasr_lasr_ctc_int8.onnx  medasr_lasr_vocab.json
scripts/: build-kenlm-wasm.sh  kenlm_wrapper.cc  package-medasr-plugin.sh
src/: asr-messages.ts  asr.worker.ts  i18n.ts  kenlm.d.ts  main.ts  prompts.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: benchmark_asr.rs
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  lib.rs  main.rs  plugins.rs  storage.rs  util.rs
src-tauri/src/plugins/: asr.rs  import.rs  llamafile.rs  manifest_utils.rs  mod.rs  registry.rs
src/app/: artifact-prompts.ts  asr-settings-controller.ts  detail-view-controller.ts  dictation-controller.test.ts  dictation-controller.ts  llm-controller.ts  recording-service.test.ts  recording-service.ts  recording-view-controller.test.ts  recording-view-controller.ts  router.test.ts  router.ts  search-text.ts  session-bundles.test.ts  session-bundles.ts  session-diagnostics.ts
src/app/list/: index.ts  list-controller.test.ts
src/asr/: client.ts  runtime-config.test.ts  runtime-config.ts  settings.test.ts  settings.ts
src/audio/: capture.ts  chunk.test.ts  chunk.ts  upload.test.ts  upload.ts  vad-segmenter.test.ts  vad-segmenter.ts
src/domain/: recording.ts  session.ts  ulid.ts
src/plugins/: contracts.test.ts  contracts.ts  index.ts  platform.test.ts  platform.ts  runtime-adapter.test.ts  runtime-adapter.ts  service.test.ts  service.ts  store.test.ts  store.ts
src/runtime/: queues.ts  serial-queue.test.ts  serial-queue.ts
src/storage/: index.ts  noop-store.ts  store.ts  tauri-store.ts
