[package]
name = "dr-toru"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "dr-toru"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Keep a unique lib name to avoid bin/lib collisions on Windows:
# https://github.com/rust-lang/cargo/issues/8519
name = "dr_toru_lib"
# Desktop Tauri builds only require cdylib/rlib. Building staticlib
# adds significant link-time memory pressure on Windows CI.
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
ureq = { version = "2", default-features = false, features = ["json"] }
ort = "2.0.0-rc.11"
ndarray = "0.16"
realfft = "3"
zip = { version = "8", default-features = false, features = ["deflate"] }
transcribe-rs = { version = "0.2.5", default-features = false, features = ["whisper"] }

[[bin]]
name = "benchmark-asr"
path = "src/bin/benchmark_asr.rs"
