[package]
name = "dr-toru"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "dr-toru"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Keep a unique lib name to avoid bin/lib collisions on Windows:
# https://github.com/rust-lang/cargo/issues/8519
name = "dr_toru_lib"
# Desktop-only: the bin links against rlib. cdylib/staticlib are only
# needed for mobile targets and add major link-time memory pressure.
crate-type = ["rlib"]

[features]
default = []
benchmarks = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry", "protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
ureq = { version = "2", default-features = false, features = ["json"] }
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "download-binaries", "copy-dylibs", "tls-native"] }
realfft = "3"
zip = { version = "8", default-features = false, features = ["deflate"] }
whisper-rs = "0.13.2"

[[example]]
name = "benchmark-asr"
path = "examples/benchmark_asr.rs"
required-features = ["benchmarks"]
